--- a/glade/dialogs/preferences.glade
+++ b/glade/dialogs/preferences.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Wed Dec 10 03:20:21 2008 -->
+<!--Generated with glade3 3.4.5 on Wed Dec 10 04:42:41 2008 -->
 <glade-interface>
   <widget class="GtkDialog" id="preferencesDialog">
     <property name="width_request">400</property>
@@ -48,12 +48,31 @@
                   <placeholder/>
                 </child>
                 <child>
+                  <widget class="GtkCheckButton" id="auto_expand">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="label" translatable="yes">Auto expand server tree</property>
+                    <property name="response_id">0</property>
+                    <property name="draw_indicator">True</property>
+                    <signal name="toggled" handler="tekka_auto_expand_toggled"/>
+                  </widget>
+                  <packing>
+                    <property name="left_attach">1</property>
+                    <property name="right_attach">2</property>
+                    <property name="top_attach">6</property>
+                    <property name="bottom_attach">7</property>
+                    <property name="x_options">GTK_EXPAND | GTK_SHRINK | GTK_FILL</property>
+                    <property name="y_options">GTK_EXPAND | GTK_SHRINK | GTK_FILL</property>
+                  </packing>
+                </child>
+                <child>
                   <widget class="GtkCheckButton" id="show_status_icon">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="label" translatable="yes">Show status icon</property>
                     <property name="response_id">0</property>
                     <property name="draw_indicator">True</property>
+                    <signal name="toggled" handler="tekka_show_status_icon_toggled"/>
                   </widget>
                   <packing>
                     <property name="left_attach">1</property>
@@ -67,6 +86,7 @@
                     <property name="label" translatable="yes">Hide on close</property>
                     <property name="response_id">0</property>
                     <property name="draw_indicator">True</property>
+                    <signal name="toggled" handler="tekka_hide_on_close_toggled"/>
                   </widget>
                   <packing>
                     <property name="left_attach">1</property>
@@ -99,29 +119,13 @@
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkCheckButton" id="auto_expand">
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="label" translatable="yes">Auto expand server tree</property>
-                    <property name="response_id">0</property>
-                    <property name="draw_indicator">True</property>
-                  </widget>
-                  <packing>
-                    <property name="left_attach">1</property>
-                    <property name="right_attach">2</property>
-                    <property name="top_attach">6</property>
-                    <property name="bottom_attach">7</property>
-                    <property name="x_options">GTK_EXPAND | GTK_SHRINK | GTK_FILL</property>
-                    <property name="y_options">GTK_EXPAND | GTK_SHRINK | GTK_FILL</property>
-                  </packing>
-                </child>
-                <child>
                   <widget class="GtkCheckButton" id="rgba">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="label" translatable="yes">Use RGBA</property>
                     <property name="response_id">0</property>
                     <property name="draw_indicator">True</property>
+                    <signal name="toggled" handler="tekka_rgba_toggled"/>
                   </widget>
                   <packing>
                     <property name="left_attach">1</property>
@@ -149,6 +153,7 @@
                         <property name="receives_default">True</property>
                         <property name="label" translatable="yes">Select font</property>
                         <property name="response_id">0</property>
+                        <signal name="clicked" handler="tekka_output_font_clicked"/>
                       </widget>
                       <packing>
                         <property name="expand">False</property>
@@ -182,6 +187,7 @@
                         <property name="receives_default">True</property>
                         <property name="label" translatable="yes">Select font</property>
                         <property name="response_id">0</property>
+                        <signal name="clicked" handler="tekka_general_output_font_clicked"/>
                       </widget>
                       <packing>
                         <property name="expand">False</property>
@@ -219,6 +225,7 @@
                   <widget class="GtkEntry" id="nick">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <signal name="focus_out_event" handler="colors_default_nick_written"/>
                   </widget>
                   <packing>
                     <property name="left_attach">1</property>
@@ -231,6 +238,7 @@
                   <widget class="GtkEntry" id="text_highlightaction">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <signal name="focus_out_event" handler="colors_highlighted_actions_written"/>
                   </widget>
                   <packing>
                     <property name="left_attach">1</property>
@@ -243,6 +251,7 @@
                   <widget class="GtkEntry" id="text_highlightmessage">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <signal name="focus_out_event" handler="colors_highlighted_messages_written"/>
                   </widget>
                   <packing>
                     <property name="left_attach">1</property>
@@ -255,6 +264,7 @@
                   <widget class="GtkEntry" id="text_action">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <signal name="focus_out_event" handler="colors_actions_written"/>
                   </widget>
                   <packing>
                     <property name="left_attach">1</property>
@@ -267,6 +277,7 @@
                   <widget class="GtkEntry" id="text_message">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <signal name="focus_out_event" handler="colors_messages_written"/>
                   </widget>
                   <packing>
                     <property name="left_attach">1</property>
@@ -331,6 +342,7 @@ Messages</property>
                   <widget class="GtkEntry" id="notification">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <signal name="focus_out_event" handler="colors_notification_written"/>
                   </widget>
                   <packing>
                     <property name="left_attach">1</property>
@@ -343,6 +355,7 @@ Messages</property>
                   <widget class="GtkEntry" id="own_text">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <signal name="focus_out_event" handler="colors_own_text_written"/>
                   </widget>
                   <packing>
                     <property name="left_attach">1</property>
@@ -375,6 +388,7 @@ Messages</property>
                   <widget class="GtkEntry" id="own_nick">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <signal name="focus_out_event" handler="colors_own_nick_written"/>
                   </widget>
                   <packing>
                     <property name="left_attach">1</property>
@@ -420,6 +434,7 @@ Messages</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="adjustment">10 0 100 1 10 10</property>
+                    <signal name="change_value" handler="chatting_log_lines_changed"/>
                   </widget>
                   <packing>
                     <property name="left_attach">1</property>
@@ -442,6 +457,7 @@ Messages</property>
                   <widget class="GtkEntry" id="part_message">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <signal name="focus_out_event" handler="chatting_part_message_written"/>
                   </widget>
                   <packing>
                     <property name="left_attach">1</property>
@@ -464,6 +480,7 @@ Messages</property>
                   <widget class="GtkEntry" id="quit_message">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <signal name="focus_out_event" handler="chatting_quit_message_written"/>
                   </widget>
                   <packing>
                     <property name="left_attach">1</property>
@@ -494,11 +511,25 @@ Messages</property>
               </packing>
             </child>
             <child>
-              <widget class="GtkScrolledWindow" id="scrolledWindow_nickColorsList">
+              <widget class="GtkTable" id="table2">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-                <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                <property name="n_rows">2</property>
+                <child>
+                  <widget class="GtkLabel" id="label7">
+                    <property name="visible">True</property>
+                    <property name="xalign">0.11999999731779099</property>
+                    <property name="label" translatable="yes">&lt;b&gt;Warning:&lt;/b&gt;
+Changes in this section will be applied after closing
+this dialog.</property>
+                    <property name="use_markup">True</property>
+                  </widget>
+                  <packing>
+                    <property name="top_attach">1</property>
+                    <property name="bottom_attach">2</property>
+                    <property name="y_options">GTK_SHRINK</property>
+                    <property name="y_padding">6</property>
+                  </packing>
+                </child>
                 <child>
                   <widget class="Custom" id="nickColorsList">
                     <property name="visible">True</property>
@@ -531,16 +562,6 @@ Messages</property>
             <property name="visible">True</property>
             <property name="layout_style">GTK_BUTTONBOX_END</property>
             <child>
-              <widget class="GtkButton" id="button1">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="label" translatable="yes">gtk-ok</property>
-                <property name="use_stock">True</property>
-                <property name="response_id">-5</property>
-              </widget>
-            </child>
-            <child>
               <widget class="GtkButton" id="button2">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -549,9 +570,6 @@ Messages</property>
                 <property name="use_stock">True</property>
                 <property name="response_id">-6</property>
               </widget>
-              <packing>
-                <property name="position">1</property>
-              </packing>
             </child>
           </widget>
           <packing>
