--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Wed Nov  5 01:19:13 2008 -->
+<!--Generated with glade3 3.4.5 on Mon Dec 15 01:06:23 2008 -->
 <glade-interface>
   <widget class="GtkWindow" id="mainWindow">
     <property name="width_request">800</property>
@@ -232,7 +232,7 @@
                               <widget class="GtkTextView" id="generalOutput">
                                 <property name="visible">True</property>
                                 <property name="editable">False</property>
-								<property name="can_focus">False</property>
+                                <property name="can_focus">False</property>
                                 <property name="wrap_mode">GTK_WRAP_WORD_CHAR</property>
                                 <property name="cursor_visible">False</property>
                               </widget>
@@ -255,7 +255,7 @@
                               <widget class="GtkTextView" id="output">
                                 <property name="visible">True</property>
                                 <property name="editable">False</property>
-								<property name="can_focus">False</property>
+                                <property name="can_focus">False</property>
                                 <property name="wrap_mode">GTK_WRAP_WORD_CHAR</property>
                                 <property name="cursor_visible">False</property>
                                 <signal name="button_press_event" handler="output_button_press_event_cb"/>
@@ -332,7 +332,7 @@
                         <child>
                           <widget class="GtkTreeView" id="serverTree">
                             <property name="visible">True</property>
-							<property name="can_focus">False</property>
+                            <property name="can_focus">False</property>
                             <property name="headers_clickable">True</property>
                             <signal name="button_press_event" handler="serverTree_button_press_event_cb"/>
                             <signal name="row_activated" handler="serverTree_row_activated_cb"/>
@@ -367,7 +367,7 @@
                             <child>
                               <widget class="GtkTreeView" id="nickList">
                                 <property name="visible">True</property>
-								<property name="can_focus">False</property>
+                                <property name="can_focus">False</property>
                                 <property name="headers_clickable">True</property>
                                 <signal name="button_press_event" handler="nickList_button_press_event_cb"/>
                                 <signal name="row_activated" handler="nickList_row_activated_cb"/>
@@ -551,6 +551,15 @@
         <property name="label" translatable="yes">Auto-join</property>
         <property name="use_underline">True</property>
         <signal name="toggled" handler="autoJoinItem_toggled_cb"/>
+      </widget>
+    </child>
+    <child>
+      <widget class="GtkMenuItem" id="setKeyItem">
+        <property name="visible">True</property>
+        <property name="tooltip" translatable="yes">Opens a dialog which asks you for the channel key to set.</property>
+        <property name="label" translatable="yes">Set Key</property>
+        <property name="use_underline">True</property>
+        <signal name="activate" handler="setKeyItem_activate_cb"/>
       </widget>
     </child>
     <child>
