--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -274,6 +274,17 @@
                         <property name="position">1</property>
                       </packing>
                     </child>
+					<child>
+					  <widget class="Custom" id="searchToolbar">
+					    <property name="visible">False</property>
+						<property name="creation_function">create_searchbar</property>
+					  </widget>
+					  <packing>
+					    <property name="position">2</property>
+						<property name="fill">False</property>
+						<property name="expand">False</property>
+					  </packing>
+					</child>
                     <child>
                       <widget class="GtkHBox" id="inputHbox">
                         <property name="visible">True</property>
@@ -308,7 +319,7 @@
                       </widget>
                       <packing>
                         <property name="expand">False</property>
-                        <property name="position">2</property>
+                        <property name="position">3</property>
                       </packing>
                     </child>
                   </widget>
