--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -300,17 +300,9 @@
                           </packing>
                         </child>
                         <child>
-                          <widget class="GtkEntry" id="inputBar">
+                          <widget class="Custom" id="inputBar">
                             <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="has_focus">True</property>
-                            <property name="is_focus">True</property>
-                            <property name="can_default">True</property>
-                            <property name="has_default">True</property>
-                            <property name="receives_default">True</property>
-                            <property name="extension_events">GDK_EXTENSION_EVENTS_ALL</property>
-                            <signal name="key_press_event" handler="inputBar_key_press_event_cb"/>
-                            <signal name="activate" handler="inputBar_activate_cb"/>
+                            <property name="create_function">create_inputbar</property>
                           </widget>
                           <packing>
                             <property name="position">2</property>
